cabal-version: 3.0
name: value-drift
version: 0.0.1.0
-- synopsis: 
-- description:
category: game
homepage: https://github.com/Zankoku-Okuno/value-drift
bug-reports: https://github.com/Zankoku-Okuno/value-drift/issues
author: Zankoku-Okuno
maintainer: zankoku.okuno@gmail.com
copyright: 2021 Zankoku-Okuno
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Data.Finite.Contiguous
    Data.MapGrid
    Data.Ref
    Data.SymbolArray
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , contiguous >=0.5
    , mtl >=2.2
    , natural-arithmetic >=0.1.2
    , primitive >=0.7
    , record-hasfield
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable value-drift
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:
  build-depends:
    , base
    , value-drift
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , value-drift
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -O2

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , value-drift
    , base
    , gauge
  default-language: Haskell2010
  ghc-options: -Wall -O2
